fix: editor styling issues for dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -81,3 +81,12 @@
     @apply bg-background text-foreground;
   }
 }
+
+.react-flow__attribution {
+  background: transparent !important;
+}
+.dark {
+  .react-flow__controls-button {
+    @apply !bg-accent;
+  }
+}
